deploy/overlays/qa/mailhog-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailhog
  namespace: default
  labels:
    app: mailhog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailhog
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mailhog
    spec:
      containers:
      - name: mailhog
        image: mailhog/mailhog:v1.0.1
        ports:
        - containerPort: 8025
          name: mailhog-web
        - containerPort: 1025
          name: mailhog-smtp
        resources:
          requests:
            memory: "200Mi"
            cpu: "250m"
          limits:
            memory: "300Mi"
            cpu: "1000m"
        livenessProbe:
          httpGet:
            path: /
            port: 8025
          initialDelaySeconds: 5
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: 8025
          initialDelaySeconds: 5
          periodSeconds: 30
