deploy/overlays/qa/database-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: default
  labels:
    app: mysql-service
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
  type: LoadBalancer
