deploy/overlays/qa/mailhog-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mailhog-service
  namespace: default
  labels:
    app: mailhog-service
spec:
  ports:
    - port: 8025
    - port: 1025
  selector:
    app: mailhog
  type: LoadBalancer
