deploy/overlays/qa/minio-service.yml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: ${NAMESPACE}
  labels:
    app: minio-service
spec:
  ports:
    - protocol: TCP
      name: web
      port: 9000
      targetPort: 9000
  selector:
    app: minio
