deploy/overlays/qa/mailhog-ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: "mailhog-ingress"
  namespace: ${NAMESPACE}
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure

spec:
  rules:
    - host: mail-${TRAEFIK_HOSTNAME}
      http:
        paths:
          - path: /
            backend:
              serviceName: mailhog-service
              servicePort: 80
